<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_save"
        android:title="@string/save"
        android:icon="@drawable/ic_baseline_save_24"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom"/>

</menu>